--- a/client/app/components/Footer/footer.module.css
+++ b/client/app/components/Footer/footer.module.css
@@ -7,21 +7,21 @@
 
 .contact {
   padding: 10px;
-  font-size: 18px; /* Adjust font size */
+  font-size: 18px;
   font-weight: bold;
 }
 
 .info {
   padding: 10px;
-  font-size: 14px; /* Adjust font size */
+  font-size: 14px; 
 }
 
 @media (max-width: 650px) {
   .contact {
-    font-size: 16px; /* Adjust font size for smaller screens */
+    font-size: 16px;
   }
 
   .info {
-    font-size: 12px; /* Adjust font size for smaller screens */
+    font-size: 12px;
   }
 }
