--- a/client/app/components/GoToLoginBtn/login.module.css
+++ b/client/app/components/GoToLoginBtn/login.module.css
@@ -1,6 +1,6 @@
 .loginButton {
   margin: 5px ;
-  background-color: #f9f6f6; /* Match your site's color */
+  background-color: #f9f6f6; 
   color: black; 
   font-size: 13px; 
   padding: 3px 15px;
