--- a/client/app/components/Navbar/navbar.module.css
+++ b/client/app/components/Navbar/navbar.module.css
@@ -1,5 +1,5 @@
 .appBar {
-  background-color: #f1f1f1;
+  background-color: #ededf3;
   color: black;
   height: 80px;
 }
@@ -15,17 +15,17 @@
 .navLogo {
   max-width: 100%;
   height: 80px;
-  margin: 15px; /* Adjust margin for better spacing */
+  margin: 15px;
 }
 
 .navButton {
   color: black;
-  font-size: 14px; /* Adjust font size */
+  font-size: 14px; 
 }
 
 .navDrawerButton {
   text-align: center;
-  font-size: 14px; /* Adjust font size */
+  font-size: 14px; 
 }
 
 @media (max-width: 650px) {
@@ -35,11 +35,11 @@
   }
 
   .navButton {
-    font-size: 12px; /* Adjust font size for smaller screens */
+    font-size: 12px; 
   }
 
   .navDrawerButton {
-    font-size: 12px; /* Adjust font size for smaller screens */
+    font-size: 12px; 
   }
   .appBar {
     height: 45px;
