--- a/client/app/components/Hero/hero.module.css
+++ b/client/app/components/Hero/hero.module.css
@@ -10,7 +10,7 @@
 }
 
 .hero {
-  background-color: #ededf3;
+  background-color: #e4e4f8;
   height: 100vh; 
   display: flex;
   align-items: center;
